// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validate the application app --help 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the application app -V 1`] = `
{
  "error": "",
  "log": "",
}
`;

exports[`Validate the application app compile merge 1`] = `
"
# cspell-tools: keep-case no-split

Amsterdam
Angeles
City
Delhi
Francisco
London
Los
Mexico
New
Paris
San
York
hello
rework
reworked
tried
try
work
worked
~amsterdam
~angeles
~city
~delhi
~francisco
~london
~los
~mexico
~new
~paris
~san
~york
"
`;

exports[`Validate the application app compile merge legacy 1`] = `
"
# cspell-tools: keep-case no-split

amsterdam
angeles
city
delhi
francisco
hello
london
los
los angeles
mexico
mexico city
new
new amsterdam
new delhi
new york
paris
rework
reworked
san
san francisco
tried
try
work
worked
york
"
`;

exports[`Validate the application app compile merge with defaults --keep-raw-case 1`] = `
"
# cspell-tools: keep-case no-split

London
Los Angeles
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
hello
rework
reworked
tried
try
work
worked
"
`;

exports[`Validate the application app compile merge with defaults 1`] = `
"
# cspell-tools: keep-case no-split

London
Los Angeles
Mexico City
New Amsterdam
New Delhi
New York
Paris
San Francisco
hello
rework
reworked
tried
try
work
worked
~london
~los angeles
~mexico city
~new amsterdam
~new delhi
~new york
~paris
~san francisco
"
`;

exports[`Validate the application app no args 1`] = `
{
  "error": "",
  "log": "",
}
`;
